; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/arm/extr_km.c_cons_cinput.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/arm/extr_km.c_cons_cinput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { i64 }
%struct.TYPE_2__ = type { i32 (i8, %struct.tty*)* }

@km_tty = common dso_local global %struct.tty** null, align 8
@linesw = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cons_cinput(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca %struct.tty*, align 8
  store i8 %0, i8* %2, align 1
  %4 = load %struct.tty**, %struct.tty*** @km_tty, align 8
  %5 = getelementptr inbounds %struct.tty*, %struct.tty** %4, i64 0
  %6 = load %struct.tty*, %struct.tty** %5, align 8
  store %struct.tty* %6, %struct.tty** %3, align 8
  %7 = load %struct.tty*, %struct.tty** %3, align 8
  %8 = call i32 @tty_lock(%struct.tty* %7)
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @linesw, align 8
  %10 = load %struct.tty*, %struct.tty** %3, align 8
  %11 = getelementptr inbounds %struct.tty, %struct.tty* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32 (i8, %struct.tty*)*, i32 (i8, %struct.tty*)** %14, align 8
  %16 = load i8, i8* %2, align 1
  %17 = load %struct.tty*, %struct.tty** %3, align 8
  %18 = call i32 %15(i8 signext %16, %struct.tty* %17)
  %19 = load %struct.tty*, %struct.tty** %3, align 8
  %20 = call i32 @tty_unlock(%struct.tty* %19)
  ret void
}

declare dso_local i32 @tty_lock(%struct.tty*) #1

declare dso_local i32 @tty_unlock(%struct.tty*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
